[package]
name = "johma_windows_enhanced"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
once_cell = "1.20.2"
sysinfo = "0.32.0"
tabled = "0.16.0"
serde = { version = "1.0.215", features = ["derive"] }
winapi = { version = "0.3.9", features = [
    "shlobj",
    "winnt",
    "processthreadsapi",
    "lmaccess",
    "lmapibuf",
    "sddl",
    "securitybaseapi",
    "winbase",
] }
toml = "0.8.19"
open = "5.3.1"
urlencoding = "2.1.3"

[[bin]]
name = "jwe"
path = "src/main.rs"
